--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="styles/indexStyles.css">
+<link rel="stylesheet" href="index.css">
 <title>Heslington Hustle</title>
 </head>
 <body>
@@ -19,22 +19,34 @@
     </div>
     <div class="cards-container">
         <div class="card">
-            <a href="/arch.html">Website</a>
+            <a href="subpages/site.html">Website</a>
         </div>
         <div class="card">
-            <a href="/req.html">Requirements</a>
+            <a href="subpages/req.html">Requirements</a>
         </div>
         <div class="card">
-            <a href="/arch.html">Architecture</a>
+            <a href="subpages/arch.html">Architecture</a>
         </div>
         <div class="card">
-            <a href="/arch.html">Method Selection and Planning</a>
+            <a href="subpages/plan.html">Method Selection and Planning</a>
         </div>
         <div class="card">
-            <a href="/arch.html">Risk Assessment</a>
+            <a href="subpages/risk.html">Risk Assessment and Mitigation</a>
         </div>
         <div class="card">
-            <a href="/arch.html">Implementation</a>
+            <a href="subpages/impl.html">Implementation and Releases</a>
+        </div>
+        <div class="card">
+            <a href="subpages/change.html">Change Report</a>
+        </div>
+        <div class="card">
+            <a href="subpages/test.html">Testing</a>
+        </div>
+        <div class="card">
+            <a href="subpages/eval.html">User Evaluation</a>
+        </div>
+        <div class="card">
+            <a href="subpages/ci.html">Contiguous Integration</a>
         </div>
     </div>
 </div>
@@ -46,10 +58,7 @@
     </div>
     <div class="cards-container">
         <div class="card">
-            <a href="/gantt.html">Gantt Charts</a>
-        </div>
-        <div class="card">
-            <a href="/gantt.html">Tests</a>
+            <a href="subpages/gantt.html">Gantt Charts</a>
         </div>
     </div>
 </div>
