--- a/subpages/arch.html
+++ b/subpages/arch.html
@@ -2,20 +2,21 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="styles/styles.css">
+<link rel="stylesheet" href="style.css">
 <title>Heslington Hustle</title>
 </head>
 <body>
 <div class="heading">
     <div class="home">
-        <a href="/index.html">Home</a>
+        <a href="../index.html">Home</a>
     </div>
     <h1>Heslington Hustle</h1>
-    <h2>Group 6</h2>
+    <h2>Group 4</h2>
     <h2>Architecture</h2>
 </div>
 <div class="CenterLink">
-    <a href="linkedDocuments/Arch1.pdf">Architecture Document</a>
+    <a href="linkedDocuments/Arch1.pdf">Arch1.pdf</a>
+    <a href="linkedDocuments/Arch2.pdf">Arch2.pdf</a>
 </div>
 <div class="GanttCharts">
     <h2>Current Implementation</h2>
