--- a/subpages/plan.html
+++ b/subpages/plan.html
@@ -2,20 +2,20 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="styles/styles.css">
+<link rel="stylesheet" href="style.css">
 <title>Heslington Hustle</title>
 </head>
 <body>
 <div class="heading">
     <div class="home">
-        <a href="/index.html">Home</a>
+        <a href="../index.html">Home</a>
     </div>
     <h1>Heslington Hustle</h1>
-    <h2>Group 6</h2>
-    <h2>Implementation</h2>
+    <h2>Group 4</h2>
+    <h2>Method Selection and Planning</h2>
 </div>
 <div class="CenterLink">
-    <a href="linkedDocuments/Impl1.pdf">Implementation</a>
+    <a href="linkedDocuments/Plan1.pdf">Plan</a>
 </div>
 </body>
 </html>
