--- a/subpages/risk.html
+++ b/subpages/risk.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="styles/styles.css">
+<link rel="stylesheet" href="style.css">
 <title>Heslington Hustle</title>
 </head>
 <body>
 <div class="heading">
     <div class="home">
-        <a href="/index.html">Home</a>
+        <a href="../index.html">Home</a>
     </div>
     <h1>Heslington Hustle</h1>
-    <h2>Group 6</h2>
-    <h2>Risk Assessment</h2>
+    <h2>Group 4</h2>
+    <h2>Risk Assessment and Mitigation</h2>
 </div>
 <div class="CenterLink">
     <a href="linkedDocuments/Risk1.pdf">Risk Assessment</a>
