Added Pages for Assessment 2 Deliverables

--- a/subpages/eval.html
+++ b/subpages/eval.html
@@ -12,11 +12,10 @@
     </div>
     <h1>Heslington Hustle</h1>
     <h2>Group 4</h2>
-    <h2>Requirements</h2>
+    <h2>User Evaluation</h2>
 </div>
 <div class="CenterLink">
-    <a href="documents/Req1.pdf">Req1.pdf</a>
-    <a href="documents/Req2.pdf">Req2.pdf</a>
+    <a href="documents/Eval2.pdf">Eval2.pdf</a>
 </div>
 </body>
 </html>
