--- a/subpages/impl.html
+++ b/subpages/impl.html
@@ -15,7 +15,8 @@
     <h2>Implementation and Releases</h2>
 </div>
 <div class="CenterLink">
-    <a href="linkedDocuments/Impl1.pdf">Implementation</a>
+    <a href="documents/Impl1.pdf">Impl1.pdf</a>
+    <a href="documents/Impl2.pdf">Impl2.pdf</a>
     <a href="https://github.com/uoy-eng1-g6/assessment1/releases/download/0.0.7/desktop-0.0.7.jar">Latest Release <img class="download" src="images/download-file-icon.png"></a>
     <a href="https://github.com/orgs/uoy-eng1-g6/repositories">Version Control Repository</a>
 </div>
