--- a/subpages/ci.html
+++ b/subpages/ci.html
@@ -12,11 +12,10 @@
     </div>
     <h1>Heslington Hustle</h1>
     <h2>Group 4</h2>
-    <h2>Requirements</h2>
+    <h2>Contiguous Integration</h2>
 </div>
 <div class="CenterLink">
-    <a href="documents/Req1.pdf">Req1.pdf</a>
-    <a href="documents/Req2.pdf">Req2.pdf</a>
+    <a href="documents/CI2.pdf">CI2.pdf</a>
 </div>
 </body>
 </html>
