Made Documents to Open in New Tab

--- a/subpages/arch.html
+++ b/subpages/arch.html
@@ -15,8 +15,8 @@
     <h2>Architecture</h2>
 </div>
 <div class="CenterLink">
-    <a href="documents/Arch1.pdf">Arch1.pdf</a>
-    <a href="documents/Arch2.pdf">Arch2.pdf</a>
+    <a href="documents/Arch1.pdf" target="_blank">Arch1.pdf</a>
+    <a href="documents/Arch2.pdf" target="_blank">Arch2.pdf</a>
 </div>
 <div class="GanttCharts">
     <h2>Current Implementation</h2>
