--- a/subpages/eval.html
+++ b/subpages/eval.html
@@ -15,7 +15,7 @@
     <h2>User Evaluation</h2>
 </div>
 <div class="CenterLink">
-    <a href="documents/Eval2.pdf">Eval2.pdf</a>
+    <a href="documents/Eval2.pdf" target="_blank">Eval2.pdf</a>
 </div>
 </body>
 </html>
