--- a/subpages/req.html
+++ b/subpages/req.html
@@ -15,8 +15,8 @@
     <h2>Requirements</h2>
 </div>
 <div class="CenterLink">
-    <a href="documents/Req1.pdf">Req1.pdf</a>
-    <a href="documents/Req2.pdf">Req2.pdf</a>
+    <a href="documents/Req1.pdf" target="_blank">Req1.pdf</a>
+    <a href="documents/Req2.pdf" target="_blank">Req2.pdf</a>
 </div>
 </body>
 </html>
