--- a/subpages/risk.html
+++ b/subpages/risk.html
@@ -15,8 +15,8 @@
     <h2>Risk Assessment and Mitigation</h2>
 </div>
 <div class="CenterLink">
-    <a href="documents/Risk1.pdf">Risk1.pdf</a>
-    <a href="documents/Risk2.pdf">Risk2.pdf</a>
+    <a href="documents/Risk1.pdf" target="_blank">Risk1.pdf</a>
+    <a href="documents/Risk2.pdf" target="_blank">Risk2.pdf</a>
 </div>
 </body>
 </html>
