--- a/subpages/change.html
+++ b/subpages/change.html
@@ -15,7 +15,7 @@
     <h2>Change Report</h2>
 </div>
 <div class="CenterLink">
-    <a href="documents/Change2.pdf">Change2.pdf</a>
+    <a href="documents/Change2.pdf" target="_blank">Change2.pdf</a>
 </div>
 </body>
 </html>
