--- a/subpages/ci.html
+++ b/subpages/ci.html
@@ -15,7 +15,7 @@
     <h2>Contiguous Integration</h2>
 </div>
 <div class="CenterLink">
-    <a href="documents/CI2.pdf">CI2.pdf</a>
+    <a href="documents/CI2.pdf" target="_blank">CI2.pdf</a>
 </div>
 </body>
 </html>
