--- a/subpages/impl.html
+++ b/subpages/impl.html
@@ -15,10 +15,10 @@
     <h2>Implementation and Releases</h2>
 </div>
 <div class="CenterLink">
-    <a href="documents/Impl1.pdf">Impl1.pdf</a>
-    <a href="documents/Impl2.pdf">Impl2.pdf</a>
-    <a href="https://github.com/uoy-eng1-g6/assessment1/releases/download/0.0.7/desktop-0.0.7.jar">Latest Release <img class="download" src="images/download-file-icon.png"></a>
-    <a href="https://github.com/td1026york/HeslingtonHustle2">Version Control Repository</a>
+    <a href="documents/Impl1.pdf" target="_blank">Impl1.pdf</a>
+    <a href="documents/Impl2.pdf" target="_blank">Impl2.pdf</a>
+    <a href="https://github.com/uoy-eng1-g6/assessment1/releases/download/0.0.7/desktop-0.0.7.jar" target="_blank">Latest Release <img class="download" src="images/download-file-icon.png"></a>
+    <a href="https://github.com/td1026york/HeslingtonHustle2" target="_blank">Version Control Repository</a>
 </div>
 </body>
 </html>
