--- a/subpages/plan.html
+++ b/subpages/plan.html
@@ -15,8 +15,8 @@
     <h2>Method Selection and Planning</h2>
 </div>
 <div class="CenterLink">
-    <a href="documents/Plan1.pdf">Plan1.pdf</a>
-    <a href="documents/Plan2.pdf">Plan2.pdf</a>
+    <a href="documents/Plan1.pdf" target="_blank">Plan1.pdf</a>
+    <a href="documents/Plan2.pdf" target="_blank">Plan2.pdf</a>
 </div>
 </body>
 </html>
