--- a/subpages/site.html
+++ b/subpages/site.html
@@ -15,7 +15,7 @@
     <h2>Website</h2>
 </div>
 <div class="CenterLink">
-    <a href="https://github.com/eb2225/theemd-site2">Website Github Repository</a>
+    <a href="https://github.com/eb2225/theemd-site2" target="_blank">Website Github Repository</a>
 </div>
 </body>
 </html>
