Added Coverage Report

--- a/subpages/test.html
+++ b/subpages/test.html
@@ -16,6 +16,7 @@
 </div>
 <div class="CenterLink">
     <a href="documents/Test2.pdf">Test2.pdf</a>
+    <a href="documents/coverage.html">Coverage Report</a>
 </div>
 </body>
 </html>
