Added New Documents

--- a/subpages/gantt.html
+++ b/subpages/gantt.html
@@ -15,8 +15,8 @@
     <h2>Gantt Charts</h2>
 </div>
 <div class="GanttCharts">
-    <h2>Current Week</h2>
-    <img src="https://www.plantuml.com/plantuml/img/hPL1Qnin48Nl-XLpAJcPhjSnII04EsamWHQ2M-WXz22l9evgMMebxI6K_FVAoihUbRHPS78msAEdJs_rPjOpOwcsQogj9UJIs6U1LyJ__CBfMjCj_2C0bfgD_m9mJQlDGgjQiXibb8Q5HfH-vIkN-5gx5axaQxNqV6JDxdJ_4bcpSjWVQYzaztaXbvyRO-JX1pfBgveBnkNw5mXgh84pOFJPa8Sb_gsvnYrALxmLlEAMMgvaq4sz3gXau6qPA9hAeqKD4Vp404hcg4eWp8tXQxaZ1zZa0ClJUjq4y5nNJznYPMkDWNe-O34sasC1KrNWZSS3m8w9GBlR_X7UUEVwZcFzn9LnnJtauiWdx5nd-mcF1TuBAgKB-aDWI-ucv8wv4d_aLUVQpj-3_AOajqgtcdqmXPoLmFnUhxRS7NLmLmxGebPeGEHUgzykwB2dBChJKL6EnjDaH3EA_ZcDn6MP6RzOSnPFKaSm6HNZt7Z4eekqwpEIVJDdpaWRD2FgDbsEackaFbsxEp9kssb7osMHlaovQwwY-0ILsbs4nRU2ocZZd599DwQtrrylADN48QMAVKO3pzDpG3UX32CNK8-idKygQSUJh9APcpF_H_mV">
+    <h2>Latest Version</h2>
+    <img src="images/Gantt-Charts/Assessment-2-Plan.png" style="border: #EEEFF3 3px outset;">
 </div>
 <div class="GanttCharts">
     <h2>Previous Versions</h2>
