--- a/subpages/test.html
+++ b/subpages/test.html
@@ -15,8 +15,9 @@
     <h2>Testing</h2>
 </div>
 <div class="CenterLink">
-    <a href="documents/Test2.pdf">Test2.pdf</a>
-    <a href="documents/coverage.html">Coverage Report</a>
+    <a href="documents/Test2.pdf" target="_blank">Test2.pdf</a>
+    <a href="documents/Manual-Tests.pdf" target="_blank">Manual Tests Document</a>
+    <a href="documents/coverage.html" target="_blank">Coverage Report</a>
 </div>
 </body>
 </html>
